Rename additional graphics and add them to html layout

--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Static</title>
+        <title>Magics Revolutionary thin diaper</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -27,20 +27,33 @@
 
         <div class="container">
             <div class="row-fluid">
-                <div class="span12 magics-main-logo"><img alt="Magics" src="images/magics_logo.png"/></div>
-                <div class="span12 loading-circle"><img alt="Magics" src="images/loading.gif"/></div>
-                <div class="span12 loading-claim">the revolutionary thin diaper</div>
+                <div class="span12 magics-main-logo"><img alt="Magics" src="images/Magics-Logo.png"/></div>
+                <div class="span12 loading-circle"><img alt="Magics" src="images/Loading.gif"/></div>
+                <div class="span12 loading-claim">The revolutionary thin diaper</div>
             </div>
 
             <div class="header" style="height: 2000px;">
+                <img src="images/Menu-Magics-Logo.png"/>
+
                 <ul class="nav nav-pills pull-right">
-                    <li class="active"><a href="#">Home</a></li>
+                    <li class="active"><a href="#">Products</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Contact</a></li>
+                    <li><a href="#">Order Online</a></li>
                 </ul>
+
+
+                <img src="images/Menu-Selected.png"/>
+                <img src="images/Menu-Drylock-Logo.png"/>
+                <img src="images/Menu-Sound.png"/>
+
                 <h3 class="text-muted">Static</h3>
             </div>
             <div class="body">
+                <img src="images/Product-Recycle.png"/>
+                <img src="images/About-Diaper.png"/>
+                <img src="images/About-Diaper-Detail.png"/>
+                <img src="images/Video.png"/>
             </div>
             <div class="footer">
                 <p>♥ from the Yeoman team</p>
