--- a/app/index.html
+++ b/app/index.html
@@ -47,7 +47,7 @@
                 <img src="images/Menu-Drylock-Logo.png"/>
                 <img src="images/Menu-Sound.png"/>
 
-                <h3 class="text-muted">Static</h3>
+                <h3 class="text-muted">huh?</h3>
             </div>
             <div class="body">
                 <img src="images/Product-Recycle.png"/>
